--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 group 'org.isegodin.game'
-version '1.0-SNAPSHOT'
+version "${projectBuildVersion}"
 
 apply plugin: 'java'
 
@@ -10,5 +10,19 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile "junit:junit:${junitVersion}"
+    compile "io.undertow:undertow-core:${undertowVersion}"
+}
+
+task wrapper(type: Wrapper) {
+    gradleVersion = "${gradleVersion}"
+}
+
+jar {
+    manifest {
+        attributes 'Main-Class': 'org.isegodin.gameOfLife.App'
+    }
+    from {
+        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+    }
 }
